syntax = "proto3";

option csharp_namespace = "Grpc.Server.GrpcServices";

package OrderGrpc;

service Ordering {
  rpc CreateOrder (Order) returns (CreateOrderResponse);
}

message Order{
	int32 id = 1;
	int32 customer_id = 2;
	double total_price = 3;
	repeated OrderItem order_items = 4;
}

message OrderItem{
	int32 id = 1;
    double price = 2;
    int32 stock = 3;
	int32 vendor_product_id = 4;
}

message CreateOrderResponse{
    bool success = 1;
    string message = 2;
}